samples/_failures_safe/1761153072_782eb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eee469f4.c: In function ‘main’:
./samples/SAFE/__tmp_eee469f4.c:147:5: error: expected declaration or statement at end of input
  147 |     int pos = 0;
      |     ^~~
